--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_weight=".01"
         android:padding="15dp"
         android:textAlignment="center"
+        android:textColor="@color/lightBlue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
